unpackaged/main/default/objects/Account/fields/Account_Created_Past_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Past_24_Hours__c</fullName>
    <description>If CreatedDate within the Last 24 hours then true, else false.</description>
    <formula>IF ((FLOOR ((NOW() - ($System.OriginDateTime)) * 24) / 24) -
(CreatedDate - ($System.OriginDateTime)) &lt; 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If CreatedDate within the Last 24 hours then true, else false.</inlineHelpText>
    <label>Account Created Past 24 Hours</label>
    <type>Checkbox</type>
</CustomField>