unpackaged/main/default/objects/Account/fields/Age_Provided__c.field-meta.xml
<CustomField>
    <fullName>Age_Provided__c</fullName>
    <description>This is used for multiple intake creation on a specific questionnaire flow that asks for other people that may be qualified for the case.</description>
    <inlineHelpText>Age provided in a separate intake questionnaire.</inlineHelpText>
    <label>Age Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>