unpackaged/main/default/objects/Account/fields/Best_time_to_reach_client__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_reach_client__c</fullName>
    <label>Best time to reach client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>