unpackaged/main/default/objects/Account/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <label>Cause of Death</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>