unpackaged/main/default/objects/Account/fields/Create_Intake_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Create_Intake_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked an intake will be created through automations, then unchecked when the intake was created. Used for form submissions in HubSpot that need intakes to be created in Salesforce.</description>
    <inlineHelpText>When checked an intake will be created through automations, then unchecked when the intake was created</inlineHelpText>
    <label>Create Intake Trigger</label>
    <type>Checkbox</type>
</CustomField>