unpackaged/main/default/objects/Account/fields/DB_ID__c.field-meta.xml
<CustomField>
    <fullName>DB_ID__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>DB ID</label>
    <type>AutoNumber</type>
</CustomField>