unpackaged/main/default/objects/Account/fields/Does_caller_have_authority_to_sign__c.field-meta.xml
<CustomField>
    <fullName>Does_caller_have_authority_to_sign__c</fullName>
    <label>Does caller have authority to sign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>