unpackaged/main/default/objects/Account/fields/Emergency_Contact_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2_Phone__c</fullName>
    <description>Emergency Contact Phone Number (for someone who DOES NOT live with the client)</description>
    <inlineHelpText>Emergency Contact Phone Number (for someone who DOES NOT live with the client)</inlineHelpText>
    <label>Emergency Contact 2 Phone</label>
    <type>Phone</type>
</CustomField>