unpackaged/main/default/objects/Account/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Emergency Contact Name (for someone who lives with the client)</description>
    <inlineHelpText>Emergency Contact Name (for someone who lives with the client)</inlineHelpText>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>