unpackaged/main/default/objects/Account/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>Emergency Contact Phone Number (for someone who lives with the client)</description>
    <inlineHelpText>Emergency Contact Phone Number (for someone who lives with the client)</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>