unpackaged/main/default/objects/Account/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <description>Emergency Contact Relationship (for someone who lives with the client)</description>
    <inlineHelpText>Emergency Contact Relationship (for someone who lives with the client)</inlineHelpText>
    <label>Emergency Contact Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>