unpackaged/main/default/objects/Account/fields/Father_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Name__c</fullName>
    <description>Used in case management items to determine father&#39;s name or name on birth certificate, etc.</description>
    <inlineHelpText>Name of client&#39;s father</inlineHelpText>
    <label>Father&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>