unpackaged/main/default/objects/Account/fields/FX_Billing_CompoundAddress_StateCode__c.field-meta.xml
<CustomField>
    <fullName>FX_Billing_CompoundAddress_StateCode__c</fullName>
    <description>Formula field - returns billing state code field as text.</description>
    <formula>TEXT(BillingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - returns billing state code field as text.</inlineHelpText>
    <label>Billing Compound Address State Code</label>
    <type>Text</type>
</CustomField>