unpackaged/main/default/objects/Account/fields/Hair_Relaxer_Recent_Intake__c.field-meta.xml
<CustomField>
    <fullName>Hair_Relaxer_Recent_Intake__c</fullName>
    <description>Takes todays date minus the &quot;Hair Relaxer Recent Intake Date&quot;. Checks if less than 14 days. Unchecks after. Used for Deduping process</description>
    <formula>TODAY() - DATEVALUE(Hair_Relaxer_Recent_Intake_Date__c) &lt;= 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hair Relaxer Recent Intake</label>
    <type>Checkbox</type>
</CustomField>