unpackaged/main/default/objects/Account/fields/Hair_Relaxer_Recent_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Hair_Relaxer_Recent_Intake_Date__c</fullName>
    <description>Last Intake date of creation. Used for dedupe process.</description>
    <label>Hair Relaxer Recent Intake Date</label>
    <type>DateTime</type>
</CustomField>