unpackaged/main/default/objects/Account/fields/HS_A1__c.field-meta.xml
<CustomField>
    <fullName>HS_A1__c</fullName>
    <description>This field is only used for intake creation. Answer 1</description>
    <label>HS A1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>