unpackaged/main/default/objects/Account/fields/HS_A2__c.field-meta.xml
<CustomField>
    <fullName>HS_A2__c</fullName>
    <description>This field is only used for intake creation. Answer 2</description>
    <label>HS A2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>