unpackaged/main/default/objects/Account/fields/HS_A3__c.field-meta.xml
<CustomField>
    <fullName>HS_A3__c</fullName>
    <description>This field is only used for intake creation. Answer 3</description>
    <label>HS A3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>