unpackaged/main/default/objects/Account/fields/HS_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>HS_Ad_ID__c</fullName>
    <description>Ad ID passed from HubSpot to the Intake created</description>
    <label>HS Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>