unpackaged/main/default/objects/Account/fields/HS_API_External_ID__c.field-meta.xml
<CustomField>
    <fullName>HS_API_External_ID__c</fullName>
    <description>Unique Identifier set in HubSpot workflows to assign the API External ID on the Intake. Only used for HubSpot to Salesforce intake creation process.</description>
    <label>HS API External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>