unpackaged/main/default/objects/Account/fields/HS_Campaign_Partner__c.field-meta.xml
<CustomField>
    <fullName>HS_Campaign_Partner__c</fullName>
    <description>This field is only used for intake creation passed from HubSpot.</description>
    <label>HS Campaign Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>