unpackaged/main/default/objects/Account/fields/HS_Intake_Vendor__c.field-meta.xml
<CustomField>
    <fullName>HS_Intake_Vendor__c</fullName>
    <description>This field is only used for intake creation passed from HubSpot.</description>
    <label>HS Intake Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>