unpackaged/main/default/objects/Account/fields/HS_Jornaya_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>HS_Jornaya_Lead_ID__c</fullName>
    <description>Used from External API Posts from Vendors in HubSpot to be added to the Intake upon creation</description>
    <label>HS Jornaya Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>