unpackaged/main/default/objects/Account/fields/HS_Lead_Tier__c.field-meta.xml
<CustomField>
    <fullName>HS_Lead_Tier__c</fullName>
    <description>This field is only used for intake creation passed from HubSpot. Marketing lead tier assigned by form submission answers</description>
    <label>HS Lead Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>