unpackaged/main/default/objects/Account/fields/HS_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>HS_Marketing_Campaign__c</fullName>
    <description>From Hubspot form fill. Passed for intake creation process</description>
    <label>HS Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>