unpackaged/main/default/objects/Account/fields/HS_Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>HS_Marketing_Channel__c</fullName>
    <description>This field is only used for intake creation passed from HubSpot.</description>
    <label>HS Marketing Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>