unpackaged/main/default/objects/Account/fields/HS_Q1__c.field-meta.xml
<CustomField>
    <fullName>HS_Q1__c</fullName>
    <description>This field is only used for intake creation. Question 1</description>
    <label>HS Q1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>