unpackaged/main/default/objects/Account/fields/HS_Q2__c.field-meta.xml
<CustomField>
    <fullName>HS_Q2__c</fullName>
    <description>This field is only used for intake creation. Question 2</description>
    <label>HS Q2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>