unpackaged/main/default/objects/Account/fields/HS_Q3__c.field-meta.xml
<CustomField>
    <fullName>HS_Q3__c</fullName>
    <description>This field is only used for intake creation. Question 3</description>
    <label>HS Q3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>