unpackaged/main/default/objects/Account/fields/HS_Sold_CPL__c.field-meta.xml
<CustomField>
    <fullName>HS_Sold_CPL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From HubSpot intake creation process, checked when it is cleared to add a CPL total on the intake. This will uncheck once intake is created.</description>
    <inlineHelpText>From HubSpot intake creation process, checked when it is cleared to add a CPL total on the intake. This will uncheck once intake is created.</inlineHelpText>
    <label>HS Sold - CPL</label>
    <type>Checkbox</type>
</CustomField>