unpackaged/main/default/objects/Account/fields/HS_Sub_Affiliate_2__c.field-meta.xml
<CustomField>
    <fullName>HS_Sub_Affiliate_2__c</fullName>
    <description>Used from External API Posts from Vendors in HubSpot to be added to the Intake upon creation</description>
    <label>HS Sub Affiliate 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>