unpackaged/main/default/objects/Account/fields/HS_Test_Intake__c.field-meta.xml
<CustomField>
    <fullName>HS_Test_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for test intakes from HubSpot, Automatically checks the test intake box</description>
    <inlineHelpText>Used to auto check the test box on an intake with this field checked from HubSpot</inlineHelpText>
    <label>HS Test Intake</label>
    <type>Checkbox</type>
</CustomField>