unpackaged/main/default/objects/Account/fields/HS_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Campaign__c</fullName>
    <description>Used to pass utm_camapign data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>