unpackaged/main/default/objects/Account/fields/HS_UTM_Channel__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Channel__c</fullName>
    <description>Used to pass utm_channel data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>