unpackaged/main/default/objects/Account/fields/HS_UTM_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Click_ID__c</fullName>
    <description>Used to pass utm_clickid data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>