unpackaged/main/default/objects/Account/fields/HS_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Medium__c</fullName>
    <description>Used to pass utm_medium data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>