unpackaged/main/default/objects/Account/fields/HS_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Source__c</fullName>
    <description>Used to pass utm_source data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>