unpackaged/main/default/objects/Account/fields/HS_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>HS_UTM_Term__c</fullName>
    <description>Used to pass utm_term data from HubSpot to Salesforce for Intake Creation</description>
    <label>HS UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>