unpackaged/main/default/objects/Account/fields/HS_Working_with_another_law_firm__c.field-meta.xml
<CustomField>
    <fullName>HS_Working_with_another_law_firm__c</fullName>
    <description>This field is only used for intake creation passed from HubSpot.</description>
    <label>HS Working with another law firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>