unpackaged/main/default/objects/Account/fields/Hubspot_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Campaign_Name__c</fullName>
    <label>Hubspot Campaign Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Up</fullName>
            </value>
            <value>
                <fullName>LA Wildfires</fullName>
            </value>
            <value>
                <fullName>Depo-Provera</fullName>
            </value>
            <value>
                <fullName>Hair Relaxer</fullName>
            </value>
            <value>
                <fullName>Necrotizing Enterocolitis</fullName>
            </value>
            <value>
                <fullName>Paraquat</fullName>
            </value>
            <value>
                <fullName>Talcum Powder</fullName>
            </value>
            <value>
                <fullName>Camp Lejune</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PFAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>