unpackaged/main/default/objects/Account/fields/Hubspot_Intake_Creation_JSON__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Intake_Creation_JSON__c</fullName>
    <description>This is used to create intake object records from Hubspot FOR this Party</description>
    <label>Hubspot Intake Creation JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>