unpackaged/main/default/objects/Account/fields/HubSpot_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Record_ID__c</fullName>
    <description>Field to Receive HubSpot Record ID from HubSpot on their &quot;Company&quot; Object from field &quot;Record ID&quot;.</description>
    <inlineHelpText>Field to Receive HubSpot Record ID from HubSpot on their &quot;Company&quot; Object from field &quot;Record ID&quot;.</inlineHelpText>
    <label>HubSpot Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>