unpackaged/main/default/objects/Account/fields/Intake_API_Temp_City__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_City__c</fullName>
    <label>Intake API Temp City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>