unpackaged/main/default/objects/Account/fields/Intake_API_Temp_Country__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_Country__c</fullName>
    <label>Intake API Temp Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>