unpackaged/main/default/objects/Account/fields/Intake_API_Temp_County__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_County__c</fullName>
    <label>Intake API Temp County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>