unpackaged/main/default/objects/Account/fields/Intake_API_Temp_State__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_State__c</fullName>
    <label>Intake API Temp State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>