unpackaged/main/default/objects/Account/fields/Intake_API_Temp_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_Street_Address_1__c</fullName>
    <inlineHelpText>DO NOT USE- THIS FIELD HAS BEEN DEPRECATED.</inlineHelpText>
    <label>DEP. Intake API Temp Street Address 1</label>
    <length>125</length>
    <type>Text</type>
</CustomField>