unpackaged/main/default/objects/Account/fields/Intake_API_Temp_Zip__c.field-meta.xml
<CustomField>
    <fullName>Intake_API_Temp_Zip__c</fullName>
    <label>Intake API Temp Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>