unpackaged/main/default/objects/Account/fields/Intake_Caller_Count__c.field-meta.xml
<CustomField>
    <fullName>Intake_Caller_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DLRS Rollup - count of intakes where this party is Caller</description>
    <inlineHelpText>DLRS Rollup - count of intakes where this party is Caller</inlineHelpText>
    <label>Intake Caller Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>