unpackaged/main/default/objects/Account/fields/Intake_Creation_Unqualifying_Reason__c.field-meta.xml
<CustomField>
    <fullName>Intake_Creation_Unqualifying_Reason__c</fullName>
    <description>If an Intake is unqualified to create. This field will populate with the reason. Used for dedupe system for postbacks to CPL Vendors and general Marketing knowledge.</description>
    <label>Intake Creation Unqualifying Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>