unpackaged/main/default/objects/Account/fields/isPowerOfAttorney__c.field-meta.xml
<CustomField>
    <fullName>isPowerOfAttorney__c</fullName>
    <label>Is Power Of Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>