unpackaged/main/default/objects/Account/fields/language_Preference__c.field-meta.xml
<CustomField>
    <fullName>language_Preference__c</fullName>
    <label>language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>