unpackaged/main/default/objects/Account/fields/Last_Texted_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Texted_At__c</fullName>
    <label>Last Texted At</label>
    <type>DateTime</type>
</CustomField>