unpackaged/main/default/objects/Account/fields/Lead_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Lead_Disposition__c</fullName>
    <description>Used for Lead Vendor postbacks. Accepted is Sold, Rejected is Denied</description>
    <label>Lead Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>