unpackaged/main/default/objects/Account/fields/Legacy_Auto_Import__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Auto_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Auto Import?</label>
    <type>Checkbox</type>
</CustomField>