unpackaged/main/default/objects/Account/fields/LegacyId_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>LegacyId_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyId Lead ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>