unpackaged/main/default/objects/Account/fields/Mother_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Name__c</fullName>
    <description>Used in case management items to determine Mother&#39;s name or name on birth certificate, etc.</description>
    <inlineHelpText>Name of client&#39;s mother</inlineHelpText>
    <label>Mother&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>