unpackaged/main/default/objects/Account/fields/Name_on_Birth_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Birth_Certificate__c</fullName>
    <description>Name of the client found on birth certificate.  Commonly used in case management questions for data verification and children born to parents that are the client.</description>
    <inlineHelpText>Name found on birth certificate of client.</inlineHelpText>
    <label>Name on Birth Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>