unpackaged/main/default/objects/Account/fields/NEC_Recent_Intake__c.field-meta.xml
<CustomField>
    <fullName>NEC_Recent_Intake__c</fullName>
    <description>Takes todays date minus the &quot;NEC Recent Intake Date&quot;. Checks if less than 14 days. Unchecks after. Used for Deduping process</description>
    <formula>TODAY() - DATEVALUE(NEC_Recent_Intake_Date__c) &lt;= 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dedupe Filter. Checks when 14 days or less from last intake created in the NEC tort.</inlineHelpText>
    <label>NEC Recent Intake</label>
    <type>Checkbox</type>
</CustomField>