unpackaged/main/default/objects/Account/fields/Number_of_Related_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Contacts__c</fullName>
    <description>DRLS Rollup to count the number of Contacts this Party/Account has related to it.</description>
    <inlineHelpText>DRLS Rollup to count the number of Contacts this Party/Account has related to it.</inlineHelpText>
    <label>Number of Related Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>