unpackaged/main/default/objects/Account/fields/Paraquat_Recent_Intake__c.field-meta.xml
<CustomField>
    <fullName>Paraquat_Recent_Intake__c</fullName>
    <formula>TODAY() - DATEVALUE(Paraquat_Recent_Intake_Date__c) &lt;= 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paraquat Recent Intake</label>
    <type>Checkbox</type>
</CustomField>