unpackaged/main/default/objects/Account/fields/Paraquat_Recent_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Paraquat_Recent_Intake_Date__c</fullName>
    <description>Last Intake date of creation. Used for dedupe process.</description>
    <label>Paraquat Recent Intake Date</label>
    <type>DateTime</type>
</CustomField>