unpackaged/main/default/objects/Account/fields/Party_Name_Concat__c.field-meta.xml
<CustomField>
    <fullName>Party_Name_Concat__c</fullName>
    <formula>litify_pm__First_Name__c + &#39; &#39; +  Middle_Name__c  +&#39; &#39;+litify_pm__Last_Name__c  +&#39; &#39;+  
IF( ISPICKVAL(Suffix__c, &#39;N/A&#39;) , &quot;&quot; , &quot; &quot; + TEXT(Suffix__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Name Concat</label>
    <type>Text</type>
</CustomField>